refactor(test): reorganize test files and improve type safety
feat(test): add comprehensive tests for PythonBridgeService data mapping
style(test): update test file formatting and structure
fix(config): update import path in concrete_processing_steps.py
refactor(store): optimize Zustand store with selective subscriptions
docs: add documentation for TypeScript improvements and optimizations

--- a/EpisodeGameApp/tsconfig.json
+++ b/EpisodeGameApp/tsconfig.json
@@ -1,6 +1,15 @@
 {
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "es6"]
+    "lib": ["dom", "dom.iterable", "es6"],
+    "strict": true,
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "skipLibCheck": true
   }
 }
