fix: resolve all code smells and quality issues
- Fix critical import error in main.py (removed missing venv_utils)
- Remove unused variables in processing.py and dependencies.py
- Replace bare exception handlers with specific exception types
- Fix import order issues in transcription services
- Rewrite ErrorBoundary to use native React error boundaries
- Update .gitignore to exclude cache directories
- Clean up syntax errors and unused imports

All 122+ linting errors have been resolved.

--- a/.gitignore
+++ b/.gitignore
@@ -310,3 +310,11 @@ debug_*.py
 **/test_*.py
 **/*.backup
 test_video.mp4
+
+# Cache directories
+**/__pycache__/
+**/.pytest_cache/
+**/.ruff_cache/
+.mypy_cache/
+.dmypy.json
+dmypy.json
