--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -4,35 +4,48 @@
   "description": "Netflix-style German Language Learning Platform",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.16",
+    "@hey-api/client-axios": "^0.9.1",
+    "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.3.0",
+    "axios-retry": "^4.0.0",
+    "framer-motion": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "axios": "^1.3.0",
-    "styled-components": "^5.3.8",
-    "@heroicons/react": "^2.0.16",
-    "react-player": "^2.12.0",
-    "framer-motion": "^10.0.0",
-    "react-hot-toast": "^2.4.0",
-    "zustand": "^4.3.6",
     "react-error-boundary": "^4.0.11",
-    "@tanstack/react-query": "^5.0.0",
     "react-hook-form": "^7.48.0",
-    "axios-retry": "^4.0.0"
+    "react-hot-toast": "^2.4.0",
+    "react-player": "^2.12.0",
+    "react-router-dom": "^6.8.0",
+    "styled-components": "^5.3.8",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@hey-api/openapi-ts": "^0.83.1",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.0",
-    "vite": "^4.1.0"
+    "@vitejs/plugin-react-swc": "^4.0.1",
+    "jsdom": "^26.1.0",
+    "typescript": "^5.9.2",
+    "vite": "^4.1.0",
+    "vitest": "^3.2.4"
   },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "test": "echo 'Frontend tests: TypeScript compilation check' && tsc --noEmit"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "generate-client": "openapi-ts",
+    "prebuild": "npm run generate-client"
   },
   "browserslist": {
     "production": [
