test: enhance test coverage and add processing services
- Improve pytest configuration with better coverage settings
- Add difficulty level filtering service for vocabulary
- Implement chunk processing service for video content
- Add comprehensive frontend component tests
- Include hook, service, and store unit tests
- Add contract testing for frontend API validation

Co-authored-by: Crush <crush@charm.land>

--- a/Backend/pytest.ini
+++ b/Backend/pytest.ini
@@ -12,6 +12,13 @@ addopts =
     --timeout=30
     --timeout-method=thread
     -p no:warnings
+    --cov-branch
+    --cov=api
+    --cov=core
+    --cov=management
+    --cov-report=term-missing
+    --cov-report=html
+    --cov-fail-under=70
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
@@ -20,5 +27,6 @@ markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
     unit: marks tests as unit tests
+    performance: marks tests as performance tests
 asyncio_mode = auto
 timeout = 30
