--- a/Backend/requirements-dev.txt
+++ b/Backend/requirements-dev.txt
@@ -1,34 +1,36 @@
 # Lightweight dev/test dependencies (cross-platform)
+# Updated for compatibility and security - 2024
 
-# Web API core
-fastapi==0.104.1
-starlette==0.27.0
-pydantic==2.5.0
-pydantic-settings>=2.0.0
+# Web API core - Latest compatible versions
+fastapi>=0.115.0,<0.116.0
+pydantic>=2.9.0,<3.0.0
+pydantic-settings>=2.5.0,<3.0.0
 python-multipart==0.0.7
 
 # Database + services
-sqlalchemy>=2.0.0
-aiosqlite>=0.19.0
+sqlalchemy>=2.0.0,<3.0.0
+aiosqlite>=0.20.0
 psycopg2-binary>=2.9.0
 alembic>=1.13.0
-fastapi-users[sqlalchemy]>=12.1.3
+fastapi-users[sqlalchemy]>=12.1.3,<13.0.0
 psutil>=5.9.0
 
 # Utilities
 pysrt>=1.1.2
-structlog>=23.1.0
-sentry-sdk[fastapi]>=1.32.0
+structlog>=24.0.0
+sentry-sdk[fastapi]>=2.0.0
 python-jose[cryptography]>=3.3.0
 
-# Test client + tools
-httpx>=0.26.0
+# Test client + tools - Updated for compatibility
+httpx>=0.27.0,<0.29.0
+anyio>=4.6.0,<5.0.0
+trio>=0.25.0
 requests>=2.31.0
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
+pytest>=8.0.0
+pytest-asyncio>=0.24.0
 pytest-timeout>=2.1.0
-pytest-cov>=4.0.0
+pytest-cov>=5.0.0
 
 # Linting and formatting
-ruff>=0.1.0
+ruff>=0.7.0
 
