--- a/Backend/requirements-ml.txt
+++ b/Backend/requirements-ml.txt
@@ -1,26 +1,28 @@
 # Heavy ML/processing dependencies (install only when needed)
+# Updated for security and compatibility - 2024
 
-openai-whisper
-transformers>=4.30.0
-torch>=2.0.0
-spacy>=3.6.0
-sentencepiece>=0.1.99
-protobuf>=3.20.0
+# Core ML libraries - Updated versions
+openai-whisper>=20231117
+transformers>=4.45.0,<5.0.0
+torch>=2.4.0,<3.0.0
+spacy>=3.8.0,<4.0.0
+sentencepiece>=0.2.0,<1.0.0
+protobuf>=4.25.0,<6.0.0
 
-# Audio/Video Processing
-moviepy>=1.0.3
-pydub>=0.25.1
-opencv-python>=4.8.0
-ffmpeg-python>=0.2.0
+# Audio/Video Processing - Updated versions
+moviepy>=1.0.3,<2.0.0
+pydub>=0.25.1,<1.0.0
+opencv-python>=4.10.0,<5.0.0
+ffmpeg-python>=0.2.0,<1.0.0
 
 # Subtitle Processing
-pysrt>=1.1.2
-webvtt-py>=0.4.6
+pysrt>=1.1.2,<2.0.0
+webvtt-py>=0.5.0,<1.0.0
 
-# Utilities
-pyyaml>=6.0
-rich>=13.0.0
-tqdm>=4.65.0
-pandas>=2.0.0
-numpy>=1.24.0
+# Utilities - Updated versions
+pyyaml>=6.0.2,<7.0.0
+rich>=13.8.0,<14.0.0
+tqdm>=4.66.0,<5.0.0
+pandas>=2.2.0,<3.0.0
+numpy>=1.26.0,<3.0.0
 
