--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.8",
+    "zod": "^4.1.8",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
