fix(tests): Remove pytest-anyio and configure asyncio-only backend
- Replace all @pytest.mark.anyio decorators with @pytest.mark.asyncio
- Configure pytest to use only asyncio backend (eliminate trio errors)
- Update pytest.ini to set asyncio_mode = auto
- Update CRUSH.md with new testing guidelines
- Remove pytest-anyio dependency to ensure clean asyncio-only testing

This fixes the test duplication issue where tests were running twice
once for each backend [asyncio] and [trio], causing confusing output
and potential errors.

💘 Generated with Crush
Co-Authored-By: Crush <crush@charm.land>

--- a/Backend/pytest.ini
+++ b/Backend/pytest.ini
@@ -1,18 +1,37 @@
 [pytest]
-testpaths = tests
-python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-addopts = -v --tb=short
+# Test discovery and execution
+addopts = 
+    -v
+    --strict-markers
+    --strict-config
+    --tb=short
+    --disable-warnings
+
+# Warning filters - suppress known warnings
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
+    ignore:.*unclosed.*:ResourceWarning
+    ignore:.*Pydantic.*:UserWarning
+
+# Test markers
 markers =
-    slow: marks tests as slow
-    integration: marks tests as integration tests
-    unit: marks tests as unit tests
-    performance: marks tests as performance tests
-    robust: marks tests as using robust URL patterns
-    auth: marks tests as requiring authentication
-    security: marks tests as security-related
+    unit: Unit tests
+    integration: Integration tests
+    api: API endpoint tests
+    auth: Authentication tests
+    slow: Slow tests
+    contract: Contract tests
+    performance: Performance tests
+
+# Configure asyncio mode to auto-handle async functions
 asyncio_mode = auto
+
+# Test paths
+testpaths = tests
+python_files = test_*.py *_test.py
+python_classes = Test*
+python_functions = test_*
+
+# Minimum version requirements
+minversion = 7.0
