tests: add Cypress for comprehensive E2E testing
Complete three-tier testing strategy:
1. Unit/Integration: Fast in-memory tests with dependency overrides
2. Frontend Contract: Mocked API tests for components
3. End-to-End: Cypress for full user workflow validation

Added:
- cypress.config.ts with environment configuration
- Custom Cypress commands for auth and common workflows
- E2E test suites for authentication and video learning flows
- Package.json scripts: e2e, e2e:open, cypress:run, cypress:open
- Cypress artifacts added to .gitignore
- Updated testing strategy documentation
- Three-tier testing approach documented in AI Development Guide

This complements in-memory testing with real browser validation of complete user journeys.

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,18 +22,19 @@
     "zustand": "^4.3.6"
   },
   "devDependencies": {
-    "@hey-api/openapi-ts": "^0.83.1",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@types/styled-components": "^5.1.26",
-    "@vitejs/plugin-react": "^3.1.0",
-    "@vitejs/plugin-react-swc": "^4.0.1",
-    "jsdom": "^26.1.0",
-    "typescript": "^5.9.2",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "@vitejs/plugin-react": "^4.2.1",
+    "cypress": "^13.6.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "typescript": "^5.0.2",
     "vite": "^4.1.0",
     "vitest": "^3.2.4"
   },
@@ -44,7 +45,11 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
+    "coverage": "vitest run --coverage",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "e2e": "cypress run --spec 'cypress/e2e/**/*'",
+    "e2e:open": "cypress open --e2e",
     "generate-client": "openapi-ts",
     "prebuild": "npm run generate-client"
   },
