refactor: enhance vocabulary service dependency injection and improve test structure
- Updated vocabulary preload service to accept a session parameter for better session management.
- Refactored tests to use dependency overrides instead of monkeypatching for improved clarity and maintainability.
- Added a script to pre-download the NeMo Parakeet model to avoid test timeouts.
- Improved session handling in the base repository and user vocabulary service tests.
- Updated pytest configuration to suppress specific warnings for cleaner test output.

--- a/Backend/pytest.ini
+++ b/Backend/pytest.ini
@@ -9,3 +9,8 @@ markers =
     api: API endpoint tests
     slow: Slow tests
     xfail: Expected to fail tests
+
+filterwarnings =
+    ignore::UserWarning:whisper.*
+    ignore::RuntimeWarning:.*coroutine.*never awaited.*
+    ignore::pytest.PytestCacheWarning
