--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Run backend unit tests
       working-directory: ./Backend
       run: |
-        python -m pytest tests/ -v --tb=short -m "not e2e and not integration"
+        python -m pytest tests/ -v --tb=short -m "not e2e and not integration" -k "unit or not integration"
 
   frontend-unit-tests:
     name: Frontend Unit Tests
@@ -55,4 +55,4 @@ jobs:
     - name: Run frontend unit tests
       working-directory: ./Frontend
       run: |
-        npm run test -- --watchAll=false --passWithNoTests
+        npm run test -- --run --passWithNoTests
