--- a/Backend/.pre-commit-config.yaml
+++ b/Backend/.pre-commit-config.yaml
@@ -84,7 +84,7 @@ repos:
     rev: v1.5.0
     hooks:
       - id: detect-secrets
-        args: [--baseline, .secrets.baseline]
+        args: [--baseline, Backend/.secrets.baseline]
         exclude: ^(tests/|\.venv/|api_venv/)
 
 # CI-specific settings
