--- a/Backend/.pre-commit-config.yaml
+++ b/Backend/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
           - types-PyYAML
           - pydantic>=2.0
           - sqlalchemy>=2.0
-        args: [--config-file=pyproject.toml]
+        args: [--config-file=Backend/pyproject.toml]
         exclude: ^(tests/|alembic/versions/)
 
   # Bandit - Security linter
@@ -38,7 +38,7 @@ repos:
     rev: 1.7.10
     hooks:
       - id: bandit
-        args: [-c, pyproject.toml]
+        args: [-c, Backend/pyproject.toml]
         additional_dependencies: ["bandit[toml]"]
         exclude: ^tests/
 
@@ -67,6 +67,7 @@ repos:
       - id: debug-statements
       - id: name-tests-test
         args: [--pytest-test-first]
+        exclude: ^tests/(conftest|base|helpers|fixtures|monitoring|utils|assertion_helpers|auth_helpers|mock_standards|fixture_validation|run_backend_tests|optimize_test_suite)\.py$
       - id: requirements-txt-fixer
         files: ^requirements.*\.txt$
 
