fix: resolve Backend broken pipe and Frontend theme errors
- Fix broken pipe error in setup-python action (add || true to pip list)
- Mock Loading component in App.test.tsx to avoid theme dependency

--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -82,4 +82,4 @@ runs:
         echo "Python path: $(which python)"
         echo "Pip version: $(pip --version)"
         echo "Installed packages:"
-        pip list --format=columns | head -20
+        pip list --format=columns | head -20 || true
