fix: add secret key env var to fast tests workflow
- Add LANGPLUG_SECRET_KEY to fast-tests.yml backend test step
- Fixes ValidationError during test initialization

Generated with assistance

--- a/.github/workflows/fast-tests.yml
+++ b/.github/workflows/fast-tests.yml
@@ -81,6 +81,8 @@ jobs:
             --tb=short \
             --disable-warnings \
             --durations=10
+        env:
+          LANGPLUG_SECRET_KEY: test-secret-key-for-ci-only-not-for-production-use
 
       - name: Lint with ruff (if available)
         run: |
