ci: skip heavy AI tests to prevent disk space issues

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,6 +70,7 @@ jobs:
           DATABASE_URL: postgresql://test:test@localhost:5432/test_langplug
           REDIS_URL: redis://localhost:6379
           LANGPLUG_SECRET_KEY: test-secret-key-for-ci-only-not-for-production-use
+          SKIP_HEAVY_AI_TESTS: "1"
         run: |
           python -m pytest tests/ --cov=api --cov=core --cov=services --cov-report=xml --tb=short
 
