--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  test:
+  test-backend:
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -46,23 +46,12 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-          cache-dependency-path: Frontend/package-lock.json
-
       - name: Install Backend dependencies
         working-directory: ./Backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
-
-      - name: Install Frontend dependencies
-        working-directory: ./Frontend
-        run: npm ci
 
       - name: Run Backend tests
         working-directory: ./Backend
@@ -74,6 +63,29 @@ jobs:
         run: |
           python -m pytest tests/ --cov=api --cov=core --cov=services --cov-report=xml --tb=short
 
+      - name: Upload Backend coverage
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./Backend/coverage.xml
+          flags: backend
+
+  test-frontend:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+          cache-dependency-path: Frontend/package-lock.json
+
+      - name: Install Frontend dependencies
+        working-directory: ./Frontend
+        run: npm ci
+
       - name: Run Frontend tests
         working-directory: ./Frontend
         run: npm test -- --coverage --watchAll=false
@@ -82,13 +94,14 @@ jobs:
         working-directory: ./Frontend
         run: npm run build
 
-      - name: Upload coverage reports
+      - name: Upload Frontend coverage
         uses: codecov/codecov-action@v3
         with:
-          files: ./Backend/coverage.xml,./Frontend/coverage/lcov.info
+          files: ./Frontend/coverage/lcov.info
+          flags: frontend
 
   build-and-push:
-    needs: test
+    needs: [test-backend, test-frontend]
     runs-on: ubuntu-latest
     permissions:
       contents: read
