fix: remove contract validation from prebuild to fix CI build
The validate-contract script uses ts-node which does not handle ESM modules
well. Since package.json has type module, running ts-node fails with
ERR_UNKNOWN_FILE_EXTENSION.

Contract validation is redundant in CI since generate-client already runs.
Kept validate-contract available for local development via npm run
validate-contract or dev:full script.

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -90,7 +90,7 @@
     "test:all": "cd ../tests && npx ts-node scripts/run-all-tests.ts",
     "generate-client": "openapi-ts",
     "validate-contract": "cd .. && npx ts-node scripts/validate-contract.ts",
-    "prebuild": "npm run generate-client && npm run validate-contract",
+    "prebuild": "npm run generate-client",
     "dev:full": "npm run generate-client && npm run validate-contract && npm run dev",
     "update-openapi": "cd ../Backend && python export_openapi.py && cd ../Frontend && npm run generate-client"
   },
