--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -15,6 +15,7 @@ jobs:
   docs:
     name: Check Documentation
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - name: Checkout code
