--- a/.github/workflows/contract-tests.yml
+++ b/.github/workflows/contract-tests.yml
@@ -14,6 +14,7 @@ concurrency:
 jobs:
   frontend-contract-tests:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     steps:
       - name: Checkout code
@@ -44,6 +45,7 @@ jobs:
 
   backend-contract-tests:
     runs-on: ubuntu-latest
+    timeout-minutes: 20
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -102,6 +104,7 @@ jobs:
   integration-contract-tests:
     if: ${{ false }}
     runs-on: ubuntu-latest
+    timeout-minutes: 25
     needs: [frontend-contract-tests, backend-contract-tests]
     steps:
       - name: Checkout code
@@ -183,6 +186,7 @@ jobs:
   notify-contract-failures:
     if: ${{ false }}
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     needs:
       [
         frontend-contract-tests,
