--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -42,6 +42,13 @@ logs/
 *.sqlite3
 database/*.db
 
+# Data directories (user data, processing artifacts)
+data/*/
+!data/*.csv
+!data/*.py
+!data/*.txt
+!data/*.md
+
 # Environment
 .env
 .env.local
