chore: update .gitignore with comprehensive cleanup patterns
Added missing patterns to prevent re-accumulation:

Testing artifacts:
- *_snapshot_*.json (coverage snapshots)
- test-results/ (test output directory)
- playwright-report/ (Playwright test reports)

Project-specific patterns:
- test_*.srt (test subtitle files)
- test_output.txt (test output files)
- server_state.json (runtime state files)

Backup files:
- *.old (old backup files)

All cleanup task patterns now covered in .gitignore

--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -17,8 +17,11 @@ build/
 .coverage
 coverage*.json
 *_report.json
+*_snapshot_*.json
 htmlcov/
 test_reports/
+test-results/
+playwright-report/
 *.log
 .benchmarks/
 
@@ -63,6 +66,7 @@ tmp/
 *.tmp
 *.bak
 *.backup
+*.old
 
 # OS
 .DS_Store
@@ -73,6 +77,9 @@ desktop.ini
 data/videos/*.srt
 data/videos/*.mp4
 test_output/
+test_*.srt
+test_output.txt
+server_state.json
 
 # Generated OpenAPI specs
 openapi*.json
