--- a/Backend/.pre-commit-config.yaml
+++ b/Backend/.pre-commit-config.yaml
@@ -8,6 +8,17 @@ default_language_version:
   python: python3.11
 
 repos:
+  # Local custom hooks
+  - repo: local
+    hooks:
+      - id: check-pytest-skip
+        name: Check for unauthorized pytest skip markers
+        entry: python .pre-commit-hooks/check-pytest-skip.py
+        language: system
+        types: [python]
+        files: ^tests/
+        pass_filenames: true
+
   # Ruff - Fast Python linter and formatter (replaces flake8, isort, black)
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.7.4 # Use latest stable version
@@ -16,11 +27,11 @@ repos:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
         types_or: [python, pyi]
-        exclude: ^(management/|Frontend/|scripts/)
+        exclude: ^(management/|Frontend/|scripts/|Backend/\.pre-commit-hooks/)
       # Formatter (replaces black)
       - id: ruff-format
         types_or: [python, pyi]
-        exclude: ^(management/|Frontend/|scripts/)
+        exclude: ^(management/|Frontend/|scripts/|Backend/\.pre-commit-hooks/)
 
   # MyPy - Static type checker (temporarily disabled for gradual typing migration)
   # - repo: https://github.com/pre-commit/mirrors-mypy
