refactor: complete path standardization Phase 8
Fix remaining hardcoded paths and add pre-commit hook:
- Fix 3 paths in tests/unit/test_vocabulary_routes.py
- Fix 2 paths in tests/fixtures/fast_auth.py
- Fix 1 path in tests/integration/test_authentication_workflow.py
- Create .pre-commit-hooks/check-hardcoded-paths.py hook
- Add hook to .pre-commit-config.yaml
- Update roadmap to mark all phases complete

Pre-commit hook prevents new hardcoded paths by detecting
async_client.(get|post|put|delete|patch)(/) patterns in tests.
Allows approved exceptions: /health, /api/auth/forgot-password.

All 410 backend test paths now use url_builder.url_for() with
route names for better maintainability and type safety.

Generated with assistance

--- a/Backend/.pre-commit-config.yaml
+++ b/Backend/.pre-commit-config.yaml
@@ -19,6 +19,14 @@ repos:
         files: ^tests/
         pass_filenames: true
 
+      - id: check-hardcoded-paths
+        name: Check for hardcoded API paths in tests
+        entry: python .pre-commit-hooks/check-hardcoded-paths.py
+        language: system
+        types: [python]
+        files: ^tests/
+        pass_filenames: true
+
   # Ruff - Fast Python linter and formatter (replaces flake8, isort, black)
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.7.4 # Use latest stable version
