--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -2,9 +2,9 @@ name: End-to-End Tests
 
 on:
   push:
-    branches: [main, develop]
+    branches: [main, master, develop]
   pull_request:
-    branches: [main, develop]
+    branches: [main, master, develop]
   workflow_dispatch:
 
 concurrency:
@@ -14,8 +14,9 @@ concurrency:
 jobs:
   e2e-test:
     name: Run E2E Tests
-    runs-on: ubuntu-latest
+    runs-on: windows-latest  # Windows for consistency with dev environment
     timeout-minutes: 30
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -25,37 +26,136 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
-          cache-dependency-path: Backend/requirements.txt
+          cache-dependency-path: src/backend/requirements.txt
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "yarn"
-          cache-dependency-path: Frontend/yarn.lock
 
       - name: Install backend dependencies
-        working-directory: ./Backend
+        working-directory: ./src/backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r requirements-dev.txt
 
-      - name: Install frontend dependencies
-        working-directory: ./Frontend
+      - name: Setup PostgreSQL
         run: |
-          corepack enable
-          yarn install --frozen-lockfile
+          # Use postgres service or mock database for CI
+          # Configure connection string via environment variable
 
-      - name: Install test dependencies
-        working-directory: ./tests
+      - name: Install Playwright
+        working-directory: ./tests/e2e
         run: |
           npm install
+          npx playwright install chromium --with-deps
+
+      - name: Start backend server
+        working-directory: ./src/backend
+        run: |
+          Start-Process powershell -ArgumentList "-Command", "python run_backend.py" -NoNewWindow
+          Start-Sleep -Seconds 10
+        shell: powershell
+
+      - name: Start frontend server
+        working-directory: ./src/frontend
+        run: |
+          npm install
+          Start-Process powershell -ArgumentList "-Command", "npm run dev" -NoNewWindow
+          Start-Sleep -Seconds 10
+        shell: powershell
+
+      - name: Wait for services to be ready
+        run: |
+          $maxAttempts = 30
+          $attempt = 0
+
+          # Wait for backend
+          while ($attempt -lt $maxAttempts) {
+            try {
+              $response = Invoke-WebRequest -Uri "http://localhost:8000/health" -UseBasicParsing -TimeoutSec 2
+              if ($response.StatusCode -eq 200) {
+                Write-Host "Backend is ready"
+                break
+              }
+            } catch {
+              Write-Host "Waiting for backend... attempt $attempt"
+            }
+            $attempt++
+            Start-Sleep -Seconds 2
+          }
+
+          # Wait for frontend
+          $attempt = 0
+          while ($attempt -lt $maxAttempts) {
+            try {
+              $response = Invoke-WebRequest -Uri "http://localhost:5173" -UseBasicParsing -TimeoutSec 2
+              if ($response.StatusCode -eq 200) {
+                Write-Host "Frontend is ready"
+                break
+              }
+            } catch {
+              Write-Host "Waiting for frontend... attempt $attempt"
+            }
+            $attempt++
+            Start-Sleep -Seconds 2
+          }
+        shell: powershell
 
       - name: Run E2E tests
-        working-directory: ./tests
-        run: |
-          npm run test:e2e
+        working-directory: ./tests/e2e
+        run: npx playwright test
         env:
-          # Set any environment variables needed for tests
-          NODE_ENV: test
+          E2E_SMOKE_TESTS: 1
+          CI: true
+        shell: powershell
+
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: tests/e2e/playwright-report/
+          retention-days: 30
+
+      - name: Upload test screenshots
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: tests/e2e/test-results/
+          retention-days: 7
+
+      - name: Upload test videos
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-videos
+          path: tests/e2e/test-results/**/*.webm
+          retention-days: 7
+
+      - name: Comment PR with test results
+        if: github.event_name == 'pull_request' && always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            const resultsPath = 'tests/e2e/playwright-report/index.html';
+
+            if (fs.existsSync(resultsPath)) {
+              const comment = `## E2E Test Results
+
+              ✅ Tests completed. View the full report in the artifacts.
+
+              - 📊 Test Report: Available in workflow artifacts
+              - 🎬 Videos: Available if tests failed
+              - 📸 Screenshots: Available if tests failed
+              `;
+
+              github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: comment
+              });
+            }
