--- a/.github/workflows/tests-nightly.yml
+++ b/.github/workflows/tests-nightly.yml
@@ -9,9 +9,6 @@ jobs:
     name: Backend Nightly
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    defaults:
-      run:
-        working-directory: src/backend
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -23,14 +20,17 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
+          cache-dependency-path: src/backend/requirements.txt
 
       - name: Install dependencies
+        working-directory: src/backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install diff-cover
 
       - name: Run pytest (in-process integration + API with higher gate)
+        working-directory: src/backend
         env:
           LANGPLUG_SECRET_KEY: test-secret-key-for-ci-only-not-for-production-use
           PYTEST_ADDOPTS: "--cov-branch --cov=api --cov=core --cov=management --cov-report=term-missing --cov-report=xml --cov-fail-under=70"
@@ -39,16 +39,19 @@ jobs:
 
       - name: Generate diff coverage markdown (PRs only)
         if: github.event_name == 'pull_request'
+        working-directory: src/backend
         run: |
           diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --markdown-report diff_coverage.md || true
 
       - name: Generate branch diff coverage markdown (PRs only)
         if: github.event_name == 'pull_request'
+        working-directory: src/backend
         run: |
           diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --branch-coverage --markdown-report branch_diff_coverage.md || true
 
       - name: Generate overall coverage markdown (PRs only)
         if: github.event_name == 'pull_request'
+        working-directory: src/backend
         run: |
           python - << 'PY'
           import xml.etree.ElementTree as ET, sys
@@ -101,18 +104,21 @@ jobs:
 
       - name: Diff coverage (PRs only, 90% min)
         if: github.event_name == 'pull_request'
+        working-directory: src/backend
         run: |
           git fetch origin ${{ github.base_ref }} --depth=1 || true
           diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --fail-under=90
 
       - name: Diff branch coverage (PRs only, 80% min)
         if: github.event_name == 'pull_request'
+        working-directory: src/backend
         run: |
           git fetch origin ${{ github.base_ref }} --depth=1 || true
           diff-cover coverage.xml --compare-branch=origin/${{ github.base_ref }} --branch-coverage --fail-under=80
 
       - name: Per-package diff coverage (lines) 90% min
         if: github.event_name == 'pull_request'
+        working-directory: src/backend
         run: |
           set -e
           git fetch origin ${{ github.base_ref }} --depth=1 || true
@@ -133,6 +139,7 @@ jobs:
 
       - name: Per-package diff coverage (branches) 80% min
         if: github.event_name == 'pull_request'
+        working-directory: src/backend
         run: |
           set -e
           git fetch origin ${{ github.base_ref }} --depth=1 || true
@@ -152,10 +159,11 @@ jobs:
 
       - name: Append coverage summary to job summary
         if: always()
+        working-directory: src/backend
         run: |
-          if [ -f src/backend/coverage_comment.md ]; then \
+          if [ -f coverage_comment.md ]; then \
             echo "## Coverage Summary" >> $GITHUB_STEP_SUMMARY; \
-            cat src/backend/coverage_comment.md >> $GITHUB_STEP_SUMMARY; \
+            cat coverage_comment.md >> $GITHUB_STEP_SUMMARY; \
           fi
 
       - name: Upload coverage XML
